# oneil

./: .gitignore  .gitmodules  .justfile  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SECONDARY_LICENSES  __init__.py  flake.nix  install.bat  install.sh  oneil.py  pyproject.toml  setup.py
src-rs/oneil/: Cargo.toml
src-rs/oneil/src/: builtins.rs  command.rs  file_parser.rs  lib.rs  main.rs  print_ast.rs  print_builtins.rs  print_debug_ast.rs  print_debug_ir.rs  print_debug_model_result.rs  print_error.rs  print_independents.rs  print_ir.rs  print_model_result.rs  print_tree.rs  print_utils.rs  stylesheet.rs
src-rs/oneil/src/convert_error/: eval.rs  file.rs  loader.rs  mod.rs  parser.rs
src-rs/oneil/src/printer/: ast.rs  error.rs  ir.rs  mod.rs  util.rs
src-rs/oneil_analysis/: Cargo.toml  README.md
src-rs/oneil_analysis/src/: context.rs  dep_graph.rs  dependency.rs  independents.rs  lib.rs  validation.rs
src-rs/oneil_analysis/src/output/: dependency.rs  error.rs  independents.rs  mod.rs  tree.rs
src-rs/oneil_ast/: Cargo.toml  README.md
src-rs/oneil_ast/src/: atom.rs  debug_info.rs  declaration.rs  expression.rs  lib.rs  model.rs  naming.rs  node.rs  note.rs  parameter.rs  span.rs  test.rs  unit.rs
src-rs/oneil_builtins/: Cargo.toml  README.md
src-rs/oneil_builtins/src/: builtin_ref.rs  function.rs  lib.rs  prefix.rs  unit.rs  value.rs
src-rs/oneil_cli/: Cargo.toml  README.md
src-rs/oneil_cli/src/: cache_prompt.rs  command.rs  lib.rs  panic_handler.rs  print_debug_ast.rs  print_debug_ir.rs  print_debug_model_result.rs  print_error.rs  print_model_result.rs  print_tree.rs  print_utils.rs  stylesheet.rs
src-rs/oneil_error/: Cargo.toml  README.md
src-rs/oneil_error/src/: context.rs  lib.rs  location.rs  traits.rs
src-rs/oneil_eval/: Cargo.toml  README.md
src-rs/oneil_eval/fuzz/: Cargo.toml
src-rs/oneil_eval/fuzz/fuzz_targets/: contains_is_valid.rs  interval_single_op.rs  linear_db_conversion.rs  shared.rs  single_op_inclusion_property.rs  single_op_valid_interval.rs
src-rs/oneil_eval/fuzz/shared/: lib.rs
src-rs/oneil_eval/src/: builtin.rs  context.rs  error.rs  eval_expr.rs  eval_model.rs  eval_model_collection.rs  eval_parameter.rs  eval_unit.rs  lib.rs  result.rs  test_context.rs  typecheck.rs  unit.rs  value.rs
src-rs/oneil_eval/src/builtin/: mod.rs  std.rs
src-rs/oneil_eval/src/interval/: classification.rs  mod.rs
src-rs/oneil_eval/src/output/: dependency.rs  eval_result.rs  mod.rs  model.rs  tree.rs
src-rs/oneil_eval/src/value/: error.rs  interval.rs  mod.rs  number.rs  number_value.rs  type_.rs  unit.rs  util.rs  value_impl.rs
src-rs/oneil_frontend/: Cargo.toml
src-rs/oneil_frontend/src/context/: resolution.rs
src-rs/oneil_frontend/src/error/: python_import.rs
src-rs/oneil_frontend/src/instance/: design.rs  graph.rs  imports.rs  model.rs
src-rs/oneil_frontend/src/resolver/: mod.rs  resolve_design.rs  resolve_model_import.rs  resolve_parameter.rs  resolve_python_import.rs  resolve_test.rs
src-rs/oneil_frontend/src/test/: resolution_context.rs  test_ast.rs  test_ir.rs
src-rs/oneil_ir/: Cargo.toml  README.md
src-rs/oneil_ir/src/: debug_info.rs  expr.rs  lib.rs  model.rs  model_import.rs  module.rs  note.rs  parameter.rs  python_import.rs  reference.rs  section.rs  span.rs  test.rs  unit.rs
src-rs/oneil_lsp/: Cargo.toml
src-rs/oneil_lsp/src/: custom_requests.rs  definition.rs  doc_store.rs  hover.rs  lib.rs  rename.rs  symbol_lookup.rs  workspace.rs
src-rs/oneil_model_loader/: Cargo.toml
src-rs/oneil_model_loader/src/: lib.rs  test.rs
src-rs/oneil_model_loader/src/error/: collection.rs  display.rs  mod.rs  resolution.rs
src-rs/oneil_model_loader/src/loader/: importer.rs  mod.rs
src-rs/oneil_model_loader/src/test/: builtin_ref.rs  context.rs  file_loader.rs  helper.rs  mod.rs
src-rs/oneil_model_loader/src/util/: builder.rs  builtin_ref.rs  info.rs  mod.rs
src-rs/oneil_model_resolver/: Cargo.toml  README.md
src-rs/oneil_model_resolver/src/: lib.rs
src-rs/oneil_model_resolver/src/error/: collection.rs  import.rs  load.rs  mod.rs  parameter.rs  submodel.rs  util.rs  variable.rs
src-rs/oneil_model_resolver/src/resolver/: mod.rs  resolve_expr.rs  resolve_model_import.rs  resolve_parameter.rs  resolve_python_import.rs  resolve_test.rs  resolve_trace_level.rs  resolve_unit.rs  resolve_variable.rs
src-rs/oneil_model_resolver/src/test/: external_context.rs  file_loader.rs  mod.rs  resolution_context.rs  test_ast.rs  (+1 more)
src-rs/oneil_module_loader/: Cargo.toml
src-rs/oneil_module_loader/src/: dep_checker.rs  error.rs  lib.rs  load_module.rs  loader.rs  module_stack.rs  test.rs  traits.rs  util.rs
src-rs/oneil_output/: Cargo.toml  README.md
src-rs/oneil_output/fuzz/: Cargo.toml
src-rs/oneil_output/src/: dependency.rs  error.rs  interval.rs  lib.rs  model.rs  number.rs  type_.rs  unit.rs  util.rs  value.rs
src-rs/oneil_parser/: CONTRIBUTING.md  Cargo.toml  README.md
src-rs/oneil_parser/src/: config.rs  declaration.rs  expression.rs  lib.rs  model.rs  note.rs  parameter.rs  test.rs  unit.rs  util.rs
src-rs/oneil_py_call_cache/: Cargo.toml  README.md
src-rs/oneil_py_call_cache/src/: error.rs  file.rs  function_call.rs  identifiers.rs  imports.rs  lib.rs  value.rs
src-rs/oneil_python/: Cargo.toml  README.md
src-rs/oneil_python/src/: error.rs  eval.rs  function.rs  lib.rs  load.rs  py_value.rs  source_hash.rs
src-rs/oneil_resolver/: Cargo.toml  README.md
src-rs/oneil_resolver/src/: lib.rs  stack.rs
src-rs/oneil_runner/: Cargo.toml  README.md
src-rs/oneil_runner/src/: builtins.rs  file_parser.rs  lib.rs
src-rs/oneil_runtime/: Cargo.toml
src-rs/oneil_runtime/fuzz/: Cargo.toml
src-rs/oneil_runtime/src/: cache.rs  error.rs  lib.rs  output.rs  runtime.rs  source_error.rs  std_builtin.rs
src-rs/oneil_shared/: Cargo.toml  README.md
src-rs/oneil_shared/src/: expr_ops.rs  labels.rs  lib.rs  load_result.rs  naming.rs  partial.rs  paths.rs  symbols.rs  traits.rs
src-rs/oneil_unit_checker/: Cargo.toml
src-rs/oneil_unit_checker/src/: convert.rs  error.rs  infer.rs  lib.rs  util.rs
(+456 files in other folders)
