[package]
name = "oneil"
description = "Oneil programming language and tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]

[features]
default = ["rust-lib", "python-imports", "python-lib"]
rust-lib = []
python-imports = [
	"oneil_cli/python",
	"oneil_eval/python",
	"oneil_python/rust-lib",
	"oneil_resolver/python",
	"oneil_runtime/python",
]
python-lib = ["oneil_python/python-lib"]

[dependencies]
oneil_analysis = { path = "../oneil_analysis" }
oneil_ast = { path = "../oneil_ast" }
oneil_builtins = { path = "../oneil_builtins" }
oneil_cli = { path = "../oneil_cli", default-features = false }
oneil_eval = { path = "../oneil_eval", default-features = false }
oneil_ir = { path = "../oneil_ir" }
oneil_lsp = { path = "../oneil_lsp" }
oneil_output = { path = "../oneil_output" }
oneil_parser = { path = "../oneil_parser" }
oneil_python = { path = "../oneil_python", default-features = false, optional = true }
oneil_resolver = { path = "../oneil_resolver", default-features = false }
oneil_runtime = { path = "../oneil_runtime", default-features = false }
oneil_shared = { path = "../oneil_shared", default-features = false }

[lints]
workspace = true
