[package]
name = "oneil_ast"
description = "AST data structures for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
oneil_shared = { path = "../oneil_shared" }

[lints]
workspace = true
