[package]
name = "oneil_error"
description = "A unified structure for errors in the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

[lints]
workspace = true