[package]
name = "oneil_eval"
description = "The evaluator for Oneil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
oneil_output = { path = "../oneil_output" }
oneil_shared = { path = "../oneil_shared" }
oneil_ir = { path = "../oneil_ir" }
oneil_frontend = { path = "../oneil_frontend" }
indexmap = { workspace = true }

[dev-dependencies]
oneil_builtins = { path = "../oneil_builtins" }
oneil_shared = { path = "../oneil_shared", features = ["random_span"] }

[lints]
workspace = true
