[package]
name = "oneil_frontend"
description = "Frontend for the Oneil programming language: parsing orchestration, file loading, and instance graph construction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
oneil_ast = { path = "../oneil_ast" }
oneil_shared = { path = "../oneil_shared" }
oneil_ir = { path = "../oneil_ir" }
oneil_output = { path = "../oneil_output" }
indexmap = { workspace = true }

[dev-dependencies]
oneil_shared = { path = "../oneil_shared", features = ["random_span"] }

[lints]
workspace = true
