
[package]
name = "oneil_ir"
description = "Intermediate representation for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]

[lints]
workspace = true
