
[package]
name = "oneil_ir"
description = "Intermediate representation for the Oneil programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
oneil_shared = { path = "../oneil_shared" }
oneil_output = { path = "../oneil_output" }
indexmap = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
