[package]
name = "oneil_lsp"
description = "LSP for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
oneil_runtime = { path = "../oneil_runtime", default-features = false }
oneil_shared = { path = "../oneil_shared" }
tokio = { version = "1", features = ["full"] }
tower-lsp-server = "0.22.1"

[lints]
workspace = true
