[package]
name = "oneil_lsp"
description = "LSP for the Oneil programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
indexmap = { workspace = true }
oneil_frontend = { path = "../oneil_frontend" }
oneil_ir = { path = "../oneil_ir" }
oneil_output = { path = "../oneil_output" }
oneil_runtime = { path = "../oneil_runtime", default-features = false }
oneil_shared = { path = "../oneil_shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-lsp-server = "0.23.0"

[lints]
workspace = true
