[package]
name = "oneil_model_loader"
description = "Model loader for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
oneil_ast = { path = "../oneil_ast" }
oneil_error = { path = "../oneil_error" }
oneil_ir = { path = "../oneil_ir" }

[lints]
workspace = true
