[package]
name = "oneil_parser"
description = "Parser for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
oneil_ast = { path = "../oneil_ast" }
oneil_error = { path = "../oneil_error" }
nom = "8.0.0"
nom_locate = "5.0.0"

[lints]
workspace = true