[package]
name = "oneil_py_call_cache"
description = "Caching python function calls for the Oneil programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
indexmap = { workspace = true }
oneil_output = { path = "../oneil_output" }
oneil_python = { path = "../oneil_python" }
oneil_shared = { path = "../oneil_shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
