[package]
name = "oneil_python"
description = "Python integration for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
indexmap.workspace = true
oneil_shared = { path = "../oneil_shared" }
pyo3 = "0.28.0"

[lints]
workspace = true
