[package]
name = "oneil_python"
description = "Python integration for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
indexmap.workspace = true
oneil_output = { path = "../oneil_output" }
oneil_shared = { path = "../oneil_shared" }
pyo3 = { version = "0.28.0", features = ["auto-initialize", "abi3"] }

[features]
default = ["python-lib", "rust-lib"]
python-lib = []
rust-lib = []

[lints]
workspace = true
