[package]
name = "oneil_runtime"
description = "Runtime for the Oneil programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
oneil_analysis = { path = "../oneil_analysis" }
oneil_ast = { path = "../oneil_ast" }
oneil_builtins = { path = "../oneil_builtins" }
oneil_eval = { path = "../oneil_eval", default-features = false }
oneil_ir = { path = "../oneil_ir" }
oneil_frontend = { path = "../oneil_frontend", default-features = false }
oneil_output = { path = "../oneil_output" }
oneil_parser = { path = "../oneil_parser" }
oneil_py_call_cache = { path = "../oneil_py_call_cache", optional = true }
oneil_python = { path = "../oneil_python", features = [
	"rust-lib",
], optional = true }
oneil_shared = { path = "../oneil_shared" }
indexmap = { workspace = true }

[features]
default = ["python"]
python = [
	"oneil_py_call_cache",
	"oneil_python",
	"oneil_frontend/python",
	"oneil_eval/python",
]

[lints]
workspace = true
