[package]
name = "oneil_shared"
description = "Shared utilities for the Oneil programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
random_span = ["dep:rand"]

[dependencies]
rand = { version = "0.9.2", optional = true }

[lints]
workspace = true
