[package]
name = "oneil_eval_fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
oneil_eval = { path = "..", features = ["arbitrary"] }

[[bin]]
name = "interval_single_op"
path = "fuzz_targets/interval_single_op.rs"
test = false
doc = false
bench = false
